Git Tests/force-app/main/default/default/objects/SolicitacaoCompras__c/SolicitacaoCompras__c.object-meta.xml
<CustomObject>
    <label>Solicitação de compras</label>
    <nameField>
        <displayFormat>SC-{0000000}</displayFormat>
        <label>Nome de Solicitação de compras</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitações de compras</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>