Git Tests/force-app/main/default/default/objects/SolicitacaoCompras__c/fields/CNPJCD__c.field-meta.xml
<CustomField>
    <fullName>CNPJCD__c</fullName>
    <externalId>true</externalId>
    <label>CNPJ do CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>