Git Tests/force-app/main/default/default/objects/SolicitacaoCompras__c/fields/CodigoSolicitacao__c.field-meta.xml
<CustomField>
    <fullName>CodigoSolicitacao__c</fullName>
    <externalId>true</externalId>
    <label>Código da solicitação</label>
    <length>255</length>
    <type>Text</type>
</CustomField>