Git Tests/force-app/main/default/default/objects/SolicitacaoCompras__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Solicitações de compras</relationshipLabel>
    <relationshipName>SolicitacoesCompras</relationshipName>
    <type>Lookup</type>
</CustomField>