Git Tests/force-app/main/default/default/objects/SolicitacaoCompras__c/fields/StatusIntegracao__c.field-meta.xml
<CustomField>
    <fullName>StatusIntegracao__c</fullName>
    <label>Status de integração</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sucesso</fullName>
            </value>
            <value>
                <fullName>Erro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>